refactor: use PersonContainsKeywordsPredicate
- Replaced all usages of NameContainsKeywordsPredicate with
  PersonContainsKeywordsPredicate in the main code and tests.
- Updated FindCommand, FindCommandParser, and related test classes
  to reflect the new predicate for keyword-based person search.
- Fixed minor Javadoc wording for case-insensitivity.

This change generalizes keyword search to allow matching on
any person field rather than just the name.